@@ -1,3 +1,8 @@
+2009-02-09  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/sqlite/virtual/: s/GdaVConnectionDataModelFunc/GdaVconnectionDataModelFunc/
+	* doc/C: doc. updates
+
 2009-02-08  Vivien Malerba <malerba@gnome-db.org>
 
 	* doc/C:
